--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "beyond-rare",
-  "version": "1.0.0",
-  "description": "Beyond Rare - Rarity Clicker Game with Backend",
-  "main": "src/server.js",
+  "version": "2.0.0",
+  "description": "Beyond Rare - Stage Edition Clicker Game",
+  "main": "src/server-simple.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "node src/server.js",
+    "start": "node src/server-simple.js",
+    "dev": "node src/server-simple.js",
     "test": "echo \"No tests yet\""
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "sql.js": "^1.10.0",
-    "uuid": "^9.0.1"
+    "express": "^4.18.2"
   }
 }
